--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,5 @@ edition = "2021"
 crossterm = "0.27.0"
 itertools = "0.12.1"
 ratatui = "0.26.1"
+serde = { version = "1.0.196", features = ['derive'] }
+serde_json = "1.0.113"
